--- a/admin.html
+++ b/admin.html
@@ -1060,7 +1060,11 @@
                     .single();
                 
                 if (error || !data) {
-                    document.getElementById('loginStatus').style.display = 'none';
+                    document.getElementById('loginStatus').innerHTML = `
+                        <div style="margin-bottom: 12px;">您的 LINE UID：</div>
+                        <code style="background: #f0f0f0; padding: 8px 12px; border-radius: 4px; font-size: 12px; word-break: break-all;">${lineUid}</code>
+                        <div style="margin-top: 8px; font-size: 12px; color: #999;">請複製此 UID 到 Supabase 設定</div>
+                    `;
                     document.getElementById('loginError').textContent = `${displayName}，您沒有管理權限`;
                     document.getElementById('loginError').style.display = 'block';
                     document.getElementById('loginBtn').textContent = '重新登入';
