--- a/coach.html
+++ b/coach.html
@@ -2027,7 +2027,7 @@
         };
 
         // ============ LIFF Config ============
-        const LIFF_ID = '2008660081-DpwfJlqa';
+        const LIFF_ID = '2008660081-9FPHgHBz';
 
         // ============ Data ============
         // 目前登入的教練
@@ -3309,7 +3309,7 @@
         }
 
         // ============ Invite Student ============
-        const STUDENT_LIFF_ID = '2008660081-kPTCVzbD';
+        const STUDENT_LIFF_ID = '2008660081-81yzIz4L';
         
         async function openInviteStudent() {
             if (!currentRequest) return;
