--- a/student.html
+++ b/student.html
@@ -902,7 +902,7 @@
         const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
         
         // LIFF ID（學員端）
-        const LIFF_ID = '2008660081-kPTCVzbD';
+        const LIFF_ID = '2008660081-81yzIz4L';
         
         let requestId = null; // 會在 LIFF 初始化後取得
         let currentRequest = null;
