--- a/admin.html
+++ b/admin.html
@@ -1022,7 +1022,7 @@
         let deleteTarget = null;
 
         // ============ LIFF Config ============
-        const LIFF_ID = '2008660081-8gEltNAP';
+        const LIFF_ID = '2008660081-KUxKYrh2';
 
         // ============ Auth ============
         
