--- a/admin.html
+++ b/admin.html
@@ -1101,9 +1101,11 @@
                     }
                 } else {
                     // 不存在，自動建立申請
+                    const randomUsername = 'line_' + lineUid.substring(1, 10);
                     const { error: insertError } = await supabaseClient
                         .from('admins')
                         .insert({
+                            username: randomUsername,
                             name: displayName,
                             line_uid: lineUid,
                             is_active: false
