--- a/student.html
+++ b/student.html
@@ -34,13 +34,40 @@
             --border: #e5e5e5;
         }
 
-        * { margin: 0; padding: 0; box-sizing: border-box; }
+        * { 
+            margin: 0; 
+            padding: 0; 
+            box-sizing: border-box;
+            -webkit-tap-highlight-color: transparent;
+        }
+
+        html {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            overscroll-behavior: none;
+            -webkit-overflow-scrolling: touch;
+            touch-action: pan-y;
+        }
 
         body {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            overscroll-behavior: none;
             font-family: 'Noto Sans TC', sans-serif;
             background: var(--bg);
-            min-height: 100vh;
             color: var(--text);
+            display: flex;
+            flex-direction: column;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
         }
 
         /* Header */
@@ -48,10 +75,11 @@
             background: linear-gradient(135deg, var(--pink-dark) 0%, var(--pink) 100%);
             padding: 18px 20px;
             color: var(--white);
-            position: sticky;
-            top: 0;
+            flex-shrink: 0;
             z-index: 100;
             box-shadow: 0 2px 10px rgba(194, 117, 102, 0.3);
+            user-select: none;
+            -webkit-user-select: none;
         }
 
         .header-content {
@@ -80,6 +108,13 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            -webkit-tap-highlight-color: transparent;
+            touch-action: manipulation;
+        }
+
+        .back-btn:active {
+            transform: scale(0.95);
+            background: rgba(255,255,255,0.3);
         }
 
         .header-title h1 {
@@ -118,10 +153,12 @@
         /* Container */
         .container {
             max-width: 500px;
+            width: 100%;
             margin: 0 auto;
             display: flex;
             flex-direction: column;
-            height: calc(100vh - 76px);
+            flex: 1;
+            overflow: hidden;
         }
 
         /* Compact Info Bar */
@@ -131,6 +168,13 @@
             border-bottom: 1px solid var(--border);
             cursor: pointer;
             transition: all 0.3s;
+            flex-shrink: 0;
+            -webkit-tap-highlight-color: transparent;
+            touch-action: manipulation;
+        }
+
+        .info-bar:active {
+            background: var(--bg);
         }
 
         .info-bar-main {
@@ -257,6 +301,7 @@
             background: var(--green-light);
             font-size: 12px;
             color: var(--green-dark);
+            flex-shrink: 0;
         }
 
         .participants-avatars {
@@ -295,6 +340,7 @@
             border-bottom: 1px solid #a5d6a7;
             font-size: 12px;
             color: #2e7d32;
+            flex-shrink: 0;
         }
 
         .student-reminder .reminder-icon {
@@ -310,6 +356,16 @@
         .messages-area {
             flex: 1;
             overflow-y: auto;
+            overflow-x: hidden;
+            -webkit-overflow-scrolling: touch;
+            overscroll-behavior-y: contain;
+            overscroll-behavior-x: none;
+            will-change: transform;
+            transform: translateZ(0);
+            -webkit-transform: translateZ(0);
+            backface-visibility: hidden;
+            -webkit-backface-visibility: hidden;
+            touch-action: pan-y;
             padding: 12px 16px;
             display: flex;
             flex-direction: column;
@@ -376,6 +432,9 @@
             border-radius: 18px;
             font-size: 15px;
             line-height: 1.5;
+            user-select: none;
+            -webkit-user-select: none;
+            -webkit-touch-callout: none;
         }
 
         .message.sent .message-bubble {
@@ -432,6 +491,8 @@
             display: flex;
             gap: 12px;
             align-items: flex-end;
+            flex-shrink: 0;
+            position: relative;
         }
 
         .chat-input {
@@ -439,6 +500,7 @@
             border: 1.5px solid var(--border);
             border-radius: 24px;
             padding: 12px 18px;
+            padding-left: 52px !important;
             font-size: 15px;
             font-family: inherit;
             outline: none;
@@ -446,6 +508,7 @@
             min-height: 48px;
             max-height: 120px;
             transition: border-color 0.2s;
+            -webkit-appearance: none;
         }
 
         .chat-input:focus {
@@ -465,10 +528,14 @@
             justify-content: center;
             transition: all 0.2s;
             flex-shrink: 0;
+            -webkit-tap-highlight-color: transparent;
+            touch-action: manipulation;
         }
 
-        .notify-btn:hover { transform: scale(1.05); background: var(--yellow-light); }
-        .notify-btn:active { transform: scale(0.95); }
+        .notify-btn:active { 
+            transform: scale(0.95); 
+            background: var(--yellow-dark); 
+        }
 
         .send-btn {
             width: 48px;
@@ -483,10 +550,13 @@
             justify-content: center;
             transition: all 0.2s;
             box-shadow: 0 2px 8px rgba(194, 117, 102, 0.3);
+            flex-shrink: 0;
+            -webkit-tap-highlight-color: transparent;
+            touch-action: manipulation;
         }
 
-        .send-btn:hover {
-            transform: scale(1.05);
+        .send-btn:active {
+            transform: scale(0.95);
         }
 
         /* Quick Replies for Student */
@@ -557,12 +627,23 @@
             font-size: 18px;
             cursor: pointer;
             color: var(--text-muted);
+            -webkit-tap-highlight-color: transparent;
+            touch-action: manipulation;
+        }
+
+        .emoji-panel-close:active {
+            transform: scale(0.95);
+            background: var(--border);
         }
 
         .emoji-panel-body {
             padding: 12px 16px;
             max-height: calc(60vh - 60px);
             overflow-y: auto;
+            overflow-x: hidden;
+            -webkit-overflow-scrolling: touch;
+            overscroll-behavior-y: contain;
+            touch-action: pan-y;
         }
 
         .emoji-category {
@@ -591,22 +672,16 @@
             cursor: pointer;
             border-radius: 8px;
             transition: all 0.15s;
+            -webkit-tap-highlight-color: transparent;
+            touch-action: manipulation;
         }
 
-        .emoji-btn:hover {
+        .emoji-btn:active {
             background: var(--pink-light);
             transform: scale(1.15);
         }
 
-        .emoji-btn:active {
-            transform: scale(0.95);
-        }
-
         /* 輸入區的表情按鈕 */
-        .input-area {
-            position: relative;
-        }
-
         .emoji-input-btn {
             position: absolute;
             left: 12px;
@@ -620,14 +695,12 @@
             cursor: pointer;
             border-radius: 50%;
             transition: all 0.2s;
+            -webkit-tap-highlight-color: transparent;
+            touch-action: manipulation;
         }
 
-        .emoji-input-btn:hover {
+        .emoji-input-btn:active {
             background: var(--pink-light);
-        }
-
-        .chat-input {
-            padding-left: 52px !important;
         }
 
         /* Typing Indicator */
@@ -674,6 +747,7 @@
             padding: 16px;
             background: var(--green-light);
             text-align: center;
+            flex-shrink: 0;
         }
 
         .chat-ended-icon {
@@ -713,6 +787,45 @@
         .toast.show {
             opacity: 1;
             transform: translateX(-50%) translateY(0);
+        }
+
+        /* 手機端優化 */
+        @media (max-width: 768px) {
+            .emoji-grid {
+                grid-template-columns: repeat(6, 1fr);
+            }
+
+            /* 強化觸控體驗 */
+            .back-btn,
+            .send-btn,
+            .notify-btn,
+            .emoji-btn,
+            .emoji-input-btn,
+            .emoji-panel-close {
+                touch-action: manipulation;
+            }
+            
+            /* 防止長按選取 */
+            .message-bubble,
+            .header {
+                -webkit-touch-callout: none;
+                user-select: none;
+                -webkit-user-select: none;
+            }
+        }
+
+        /* iOS 專用優化 */
+        @supports (-webkit-touch-callout: none) {
+            .messages-area,
+            .emoji-panel-body {
+                -webkit-overflow-scrolling: touch;
+            }
+            
+            /* 防止 iOS 橡皮筋效果 */
+            html, body {
+                position: fixed;
+                overflow: hidden;
+            }
         }
     </style>
 </head>
