--- a/student.html
+++ b/student.html
@@ -492,15 +492,21 @@
             gap: 12px;
             align-items: flex-end;
             flex-shrink: 0;
+        }
+
+        .input-wrapper {
+            flex: 1;
             position: relative;
+            display: flex;
+            align-items: center;
         }
 
         .chat-input {
-            flex: 1;
+            width: 100%;
             border: 1.5px solid var(--border);
             border-radius: 24px;
             padding: 12px 18px;
-            padding-left: 52px !important;
+            padding-left: 48px;
             font-size: 15px;
             font-family: inherit;
             outline: none;
@@ -684,7 +690,7 @@
         /* 輸入區的表情按鈕 */
         .emoji-input-btn {
             position: absolute;
-            left: 12px;
+            left: 10px;
             top: 50%;
             transform: translateY(-50%);
             width: 36px;
@@ -697,6 +703,7 @@
             transition: all 0.2s;
             -webkit-tap-highlight-color: transparent;
             touch-action: manipulation;
+            z-index: 5;
         }
 
         .emoji-input-btn:active {
@@ -992,8 +999,10 @@
 
         <!-- Input Area -->
         <div class="input-area">
-            <button class="emoji-input-btn" onclick="toggleEmojiPanel()">😊</button>
-            <textarea class="chat-input" id="chatInput" placeholder="輸入訊息..." rows="1" oninput="handleTyping()"></textarea>
+            <div class="input-wrapper">
+                <button class="emoji-input-btn" onclick="toggleEmojiPanel()">😊</button>
+                <textarea class="chat-input" id="chatInput" placeholder="輸入訊息..." rows="1" oninput="handleTyping()"></textarea>
+            </div>
             <button class="notify-btn" onclick="forceNotify()" title="通知對方查看聊天室">📢</button>
             <button class="send-btn" onclick="sendMessage()">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
