--- a/admin.html
+++ b/admin.html
@@ -3632,7 +3632,7 @@
                             level_change_reason,
                             line_uid
                         },
-                        changed_by: currentUser?.name || '管理員'
+                        changed_by: '管理員'
                     })
                 });
                 
