--- a/coach.html
+++ b/coach.html
@@ -3805,7 +3805,7 @@
             if (!currentRequest) return;
             
             const studentName = currentRequest.student?.name || currentRequest.student_name || '學員';
-            if (!confirm(`確定要邀請「${studentName}」加入討論嗎？\n\n⚠️ 注意：邀請學員後，將無法取消此代課請求。`)) {
+            if (!confirm(`\n確定要邀請「${studentName}」加入討論嗎？\n`：) {
                 return;
             }
             
