--- a/admin.html
+++ b/admin.html
@@ -5304,7 +5304,7 @@
                     .insert({
                         request_id: currentChatRoomId,
                         sender_type: 'admin',
-                        sender_name: '管理員',
+                        sender_name: '客服小編',
                         message_type: 'text',
                         content: content
                     });
