--- a/admin.html
+++ b/admin.html
@@ -3799,6 +3799,7 @@
                 .from('coaches')
                 .select('*')
                 .neq('status', 'pending')
+                .eq('is_active', true)
                 .order('created_at', { ascending: false });
             
             if (error) throw error;
